# sine_generator

./: .gitignore  Cargo.toml  README.md  sine.s
src/: main.rs
