[package]
name = "sine_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = "0.19.0"


[profile.release]
strip = true     #strip symbols from binary
lto = true       #enable link time operation
opt-level = "s"  #optimize for size 